# graduation-design

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: covid_case.yaml  simulation.yaml
data/: README.md  beijing_covid_cases.csv  covid_cases.csv  hubei_covid_cases_20200122_20200430.csv  hubei_covid_cases_china_spatiotemporal.csv  hubei_daily_covid_cases_20200122_20200430.csv
data/raw/: ChinaSpatialTemporalCOVID-19_2020.1.19-2.22.xls  City_Confirmed_0115_1010.csv  MCMC.pptx  time_series_HKU_Wuhan.csv
outputs/: covid_rt_conditioned_20260329_190808.csv  covid_rt_hybrid_20260329_190949.csv
scripts/: run_all_with_logs.py  run_covid_case.py  run_covid_case_conditioned.py  run_covid_case_hybrid.py  run_simulation.py
src/rt_mcmc/data/: io.py  serial_interval.py
src/rt_mcmc/evaluation/: metrics.py
src/rt_mcmc/experiments/: covid_case_study.py  simulation.py
src/rt_mcmc/mcmc/: sampler.py
src/rt_mcmc/models/: bayesian_rt.py  renewal.py
